delete default server_url.
I just forgot delete my url.
:D

--- a/_config.yml
+++ b/_config.yml
@@ -130,4 +130,4 @@ giscus: # https://giscus.app/zh-CN
   lang: 'zh-CN'
 waline: # https://waline.js.org/guide/get-started.html
   enable: false # 是否启用 Waline 评论系统
-  server_url: 'https://waline.parksi.top'
+  server_url: '' 
